--- a/src/Presentation/CTM.Win/Forms/FrmMain.resx
+++ b/src/Presentation/CTM.Win/Forms/FrmMain.resx
@@ -3362,6 +3362,62 @@
         nDUJX/Z/Qy4yGbfnZYggp7jG+uSQhwAq42/z4eQeNi61hQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="barButtonItem38.Glyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAA4dEVYdFRpdGxlAEhpZ2g7TG93O0Nsb3NlO0NoYXJ0O1N0b2NrO1NoYXJlO09wZW47Q2FuZGxl
+        O1N0aWNr36bPbQAAArtJREFUOE9lktlPU0EUxu9f4IOJGtewiAEECRRikVKVkBgxGtGQGFYBRUWgFEoU
+        gSJICDEgq/FJFEEjIogbBRWKiD4I4qsEidGoIEsphW63y+eZqa0xPvzuOXfmO9+czBmhpePjIIHmdsYE
+        p+mOmw9obHPRcJsxjvpb47jWOsapu/l+UKi+8Q5OwAV9PPE/nH8AHBwnKpreQKi6/pYvmi12mCw27D+U
+        ASNFlrNopHXGaEwsVs02Dw5yKW8YgXClZZQbuMV7D6bCSAIGF5tcvJbHYMUkerCTgbp+GAJrg7XjchYR
+        FZvoyZlwIkcBbZQc2kg5hiKjMXYuFwaTFXa7AyV1Wgjq+hHeTlaeGhHyeITLjkJCnMopgcEoYlAqw0Jn
+        i4v7zXghkUK/KkIkg+KrQxDK6oZ5O6F7DvMN/aqVE7I7DssUB8KkmGmuwnReMn42VqJvVzj0K1aINgcu
+        1LyCcKlWC5vdieCIA/8Y7JTE8vg8WIIftaX4nH0C32su4ol/CHQGK6yiHUXVL/8aBITF8I1FQmewwD9k
+        Hzd4TAXfKpSYOn0cX8ty0e0b+K8Ba8NK7aRmFcIvWAa/oGhsD5IhOTOfzCzo8QnEF1UmJtOPYDo/DZ1b
+        d2BBb+ZjVlYOQFCRi0V0YHHZwguYwQLlHBI+oIKpMwn4lBKHycx43NvogzlaN9KUFJc1EAqqBmC22knM
+        iszwDpBinvJ5ErHYn5CCuxu80bHeC+3rvKA5loS5JRMfcW55HwRlRT9/RLxgyYxtfuH8hDnKfzF0Jk7b
+        2i2YpUIG+zfQhZ8vfQZBUa7hD8ct3uwb6ima1ZkJFk1oXbOJx5lFhpFfcHYJGeSo+6gdG380bpYZdALD
+        PVYOzX9pxUK4JnW2+CmEjKJeTYaqF+mqRzhJpBX2IK2gB6nKbk5y/kMPSQo3XUjMY3RpfgPQjyjM6fhx
+        cgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="barButtonItem38.LargeGlyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAA4dEVYdFRpdGxlAEhpZ2g7TG93O0Nsb3NlO0NoYXJ0O1N0b2NrO1NoYXJlO09wZW47Q2FuZGxl
+        O1N0aWNr36bPbQAABwFJREFUWEe9V2dQVUcYJfbeosbYu6IiIvaCDYPG2GJiD0ZGDKigoMYCig3LWGLD
+        XkExImIvY+8tMfmXqAiWzNgFK+9Rv3zn2933rnXG/AgzZ8637Zyz9152wUX/5GLk/gTk+Y/Iq4EaOp8x
+        XHJFJ1w9uWX3n/QxxAC73oME8B8UDSR8GJt3GlwVbIi7ckqHcMm9Ycfv9H//rI69ROyNp+GSZ32cCpCR
+        kU3pGVkapgZbocbtljmo7Vzb0/UY88eQk5NDK7dcRIB8EmDt9t8ohwNYDd4HMRFWkP63xG3vYVt6pm6D
+        MymbA6ywBliz7QqnIi2KnajdAFe6dlU1TLWIGfuqV4A2YNiViZjZs+hiZx/dh7bqM2MIEBV9AQHyI0De
+        1bGXVQCLuEqcRZd9WEj3GwFj6t1juKrZII3707hO04YXO3ZWfTLmxGsEyM6hZZvPOwOs2npJAmChnWEM
+        YHbJGwGUkNqJDsHo+I2fMn2P0bn2nYRfAzbFaWAGAizZdNYZAO8DAZBeCSoj8PkO3sxvGgT/PIe8uviS
+        l88P1JYRND7SYaI4g854tVe1IMPBr9IyKIsDLN5wBgEKIEC+qJgL8mUaAxHSONuuo0qOMWaMt+k8SIlp
+        4dbeA3Q7k64GBtGJlm3oRPNWdLxZK7oSMEr6MRd4aQKsP+0MsDz6vHwYEBMTBnaB9qk27YQNINaqU3/e
+        CdcsBrTo0NfRPta0Jd1fNY8erJxL91fMpiOezcXUzEWdmZVDi9aeQoCCCJB/Kb8PvBezC7UzVWMnKn0m
+        vcQYCzRv/70ICV5nULN2fRztI41b0D8zQ+nWOD+6OyOUDjdqRi94jpn7gjkzK5sWrLEEWLJBBZCUMANr
+        HG3SghfDXIswmnp9K6IQA3u26SniGDvk3pTuRgRTcsiPwgfcPNVcCxBg/qoTzgCL15+R92IMBFoQOzDJ
+        sRi1Z+se9OKVFmT2aNndIX6wQRO6EzaCkoMH0+3JgbS/XiN6znOe85hBRmY2zVt5HAEKIUCBRetOOwIY
+        IaugqbEY7NGym9TPIMxwb95ViXO9z9WDbk0cTkkjB9Ltcf60p4679GOuQToHmBt1zBlgIb+PLP4wrCbn
+        hgyT9PtdG4noWd9hjp00bNZF1a/SRdCtiQ89e6nE99R2o+TQoXQzoB8lhQylXTXrU6qM8Vw9B6ftnOVH
+        EaAwAhRcsPqkfJlKVGFPHTe6FxVJ95bNontLZ9LuWg1kMUzre3qzaLrCi3Sq17iTjKXyWEKNBpQ8Zggl
+        +vehpNG+FF+tngRQ88EqQOTSI84Ac6KOyntxToRQPbo7JYiSggbRnfCRFF+dhdgMcPXowGynFK6Buu7t
+        mVU7vkpduhk0mK779aKkUYMormJtPY/HnyvGyTrtl8MIUEQCRC47IqmUAYdg3lHVlW5PDKDEwH50a8Jw
+        iqukhDA2xH8s1WnoRbUbtqVabm3J1z9UmbDBdjZMDBxA1327M/enbeVrcL+dnmqgxskasfCgI0ChWfw4
+        VAA7pfIEmGyvUJOSx/rRDf/vKCnUj4Vqqh0wRIjnIgAETd9TZhgmBvSla4O+psSf+tLWL6rRExlzAgfa
+        lAUSoKgEmLH4MF+32WoX8qjstLVcdboZ7EvXh/akm6MG05ayVd8IALOaDVq9IQzE8jyE/ru/D90Y1odi
+        ylSmJ8/sGjZhBAhfcMARoPB0BOC/AayPKqZMFd5Jf7o2uBvvpB/FfF6FnvJiGYcYc3XXFiIobYGNtpSu
+        zO+/N/3V15vD96LoUpXpMfc/5vHHqWAbH3CZFDZvnzNAxKJD8mEYA4gf6j2QoktWos2CCnSg50BtwkKa
+        q9ZuqvognKoCYB3WbOQ1m0pUlHUYAx7peThZw+ZKgGIIUGQqfxD4MMwuDMNoY/EKktoYyy40KtfyfKfP
+        mCGAMQRbgQNv0py9zgDh8w/INSsmWARDMGN9kXKqT6DEHwnbqGIND+G3DYCNxcrrOk34oe4H46CbOFsC
+        FEeAomHz98uHYcSchjZaW6isFnoXFaq56zpNGxhWwVE/lD7Vb9o4TSdE7rYEmLdfrlsjbETAq/OXfqff
+        4MuqbiJohK01gj9IsdEDrh9wH/gh2ikqwPhZEqCEBJg8d69cw1YDUztFP1SD2YSFHdBtY2jtA1L52B43
+        c5cjQDG8D3yZTnEtrEWEjShYjylBi4ml776u7z9lWMZQ484YNyPB+QQmzN7juO8d4LZcsRY8E+ZbjYFL
+        Sd2GChCVe8TU1j4Bn7CMFK5TmEOnOwMUDA6PPT12xi4ay6kUdvKEnRTCk0Kmx1PINEZEPI2J2EGjgamM
+        KXEUPDWOgpiBUeHbFcJ+pZGTgW00kusRzIJJ2ygQmBgr8Buz7ix7y22If83xpxF+J/FVAkj2KSj5CSjF
+        wBo2d8n9L+ZRCMaPcDYMAAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="defaultLookAndFeelMainForm.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
